-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.6, 6.8.0
-
1a523a418 (dev), da6ec4a57 (6.9), f62327c61 (tqtc/lts-6.8)
When define QColor as .rep file property, invalid type warning generated during build process:
"Trying to construct an instance of an invalid type, type id: 4099"
The same applied to QVector2D.
Snippet for reproducing the issue:
// .rep file #include <QColor> class Test { PROP(QColor myColor="red") };
| For Gerrit Dashboard: QTBUG-131016 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 644045,2 | Fix warning with built-in types check if the type is from QtGui/Widgets | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
| 644318,2 | Fix warning with built-in types check if the type is from QtGui/Widgets | 6.9 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
| 644501,2 | Fix warning with built-in types check if the type is from QtGui/Widgets | tqtc/lts-6.8 | qt/tqtc-qtremoteobjects | Status: MERGED | +2 | 0 |