Fix warning with built-in types check if the type is from QtGui/Widgets

Fixes: QTBUG-131016
Change-Id: I2ffd9c9eb28f629b3977a5dcf271f5eb44495872
Reviewed-by: Brett Stottlemyer <brett.stottlemyer@gmail.com>
(cherry picked from commit 1a523a418915d1512f515e165c88541539e92bff)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit da6ec4a5767f59406ac9949694114b86912f0dd3)